# books_helper_backend

./: .pre-commit-config.yaml  Dockerfile  README.md  deploy.sh  docker-compose.yaml  entrypoint.sh  pyproject.toml
app/books/: admin.py  models.py  serializers.py  views.py
app/books_profiler/: apps.py  models.py  serializers.py  views.py
app/conf/: nginx.conf
app/libs/: global_columns_state.py
app/settings/: settings.py  urls.py
